Dodanie dwuch projektów simpleCMS i MyTaskManager

--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link href='style.css' rel='stylesheet' type='text/css'>
 </head>
 
@@ -57,6 +51,26 @@
         <div class="container" id="startchange">
             <div class="row">
                 <h2>Portfolio</h2>
+                <div class="col-sm-6 col-md-4 project-item">
+                    <article>
+                        <a href="https://github.com/DonCamilliano/simpleCMS" target="_blank">
+                            <img src="img/simpleCMS2.jpg" alt="SimpleCMS">
+                            <div class="hover">
+                                <p>SimpleCMS</p>
+                            </div>
+                        </a>
+                    </article>
+                </div>
+                <div class="col-sm-6 col-md-4 project-item">
+                    <article>
+                        <a href="https://github.com/DonCamilliano/simpleCMS" target="_blank">
+                            <img src="img/MyTaskManager2.jpg" alt="SimpleCMS">
+                            <div class="hover">
+                                <p>MyTaskManager</p>
+                            </div>
+                        </a>
+                    </article>
+                </div>
                 <div class="col-sm-6 col-md-4 project-item">
                     <article>
                         <a href="https://github.com/DonCamilliano/LogPanel" target="_blank">
@@ -145,6 +159,7 @@
                     </article>
                 </div>
 
+
             </div>
         </div>
     </section>
@@ -171,8 +186,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <a href="http://codepen.io/DonCamillo" target="_blank">
-                     <i class="fa fa-codepen"></i>
-                     </a>
+                        <i class="fa fa-codepen"></i>
+                    </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <a href="http://www.freecodecamp.com/fccfd0304e8" target="_blank">
@@ -183,6 +198,11 @@
         </div>
         </div>
     </footer>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 </body>
 
