--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h3>O mnie</h3>
-                    <p>Nazywam się Kamil Ludwiczuk, jestem początkującym Web Developerem. Korzystam z internetowych źródeł,
+                    <p>Nazywam się Kamil Ludwiczuk, chcę być Web Developerem. Korzystam z internetowych źródeł,
                         min. FreeCodeCamp, do nauki HTML,CSS, JavaScript, Angular i wielu innych. Tutaj zamieszczam swoje
                         postępy, mam nadzieję że lista będzie cały czas się wydłużać, a moja wiedza rosnąć.</p>
                 </div>
