Portal-Angular2 added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
             <div class="row">
                 <h2>Portfolio</h2>
                 <div class="col-sm-6 col-md-4 project-item">
+                        <article>
+                            <a href="https://github.com/DonCamilliano/Portal-Angular2" target="_blank">
+                                <img src="img/Wikipedia_Viewer2.png" alt="SimpleCMS">
+                                <div class="hover">
+                                    <p>Portal - Angular 2+</p>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                <div class="col-sm-6 col-md-4 project-item">
                     <article>
                         <a href="https://github.com/DonCamilliano/simpleCMS" target="_blank">
                             <img src="img/simpleCMS2.jpg" alt="SimpleCMS">
@@ -106,17 +116,6 @@
 
                 <div class="col-sm-6 col-md-4 project-item">
                     <article>
-                        <a href="https://github.com/DonCamilliano/WikipediaViewer" target="_blank">
-                            <img src="img/Wikipedia_Viewer2.png" alt="Wikipedia Viewer">
-                            <div class="hover">
-                                <p>Wikipedia Viever</p>
-                            </div>
-                        </a>
-                    </article>
-                </div>
-
-                <div class="col-sm-6 col-md-4 project-item">
-                    <article>
                         <a href="https://github.com/DonCamilliano/Pomodoro_Clock" target="_blank">
                             <img src="img/Pomodoro_clock2.png" class="img-responsive" alt="Pomodoro Clock">
                             <div class="hover">
@@ -147,6 +146,17 @@
                         </a>
                     </article>
                 </div>
+
+                <div class="col-sm-6 col-md-4 project-item">
+                        <article>
+                            <a href="https://github.com/DonCamilliano/WikipediaViewer" target="_blank">
+                                <img src="img/Wikipedia_Viewer2.png" alt="Wikipedia Viewer">
+                                <div class="hover">
+                                    <p>Wikipedia Viever</p>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
 
                 <div class="col-sm-6 col-md-4 project-item">
                     <article>
