My info updated

--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h3>O mnie</h3>
-                    <p>Nazywam się Kamil Ludwiczuk, chcę być Web Developerem. Korzystam z internetowych źródeł,
-                        min. FreeCodeCamp, do nauki HTML,CSS, JavaScript, Angular i wielu innych. Tutaj zamieszczam swoje
-                        postępy, mam nadzieję że lista będzie cały czas się wydłużać, a moja wiedza rosnąć.</p>
+                    <p>Nazywam się Kamil Ludwiczuk, jestem Web Developerem. Pracuję w 
+                        firmie Enovatio. Pracuję w zawodzie prawie dwa lata. Obecnie chcę rozwijać swoje
+                         umiejętności programowania w Javascript wykorzystując głównie framework
+                          Angular 2+.</p>
                 </div>
             </div>
         </div>
